<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RGB Tool</string>
    <string name="rgb_gallery_name">RGB Tool Gallery</string>
    <string name="rgb_label">RGB</string>
    <string name="argb_label">ARGB</string>
    <string name="hsb_label">HSB</string>
    <string name="color_hexadecimal_label">HEX</string>
    <string name="color_list_empty">No colors</string>
    <string name="action_not_supported_error">No application available for the required action</string>

    <!-- Main tabs -->
    <string name="main_tab_color">Color</string>
    <string name="main_tab_details">Details</string>
    <string name="main_tab_color_list">Color list</string>

    <!-- Common actions -->
    <string name="action_common_set">Set</string>
    <string name="action_common_cancel">Cancel</string>
    <string name="action_common_skip">Skip</string>

    <!-- MainActivity action items -->
    <string name="action_camera">Color from image</string>
    <string name="action_print">Print color</string>
    <string name="action_print_palette">Print palette</string>
    <string name="action_generic_share">Share</string>
    <string name="action_share">Share color</string>
    <string name="action_share_palette">Share palette</string>
    <string name="action_generic_delete">Delete</string>
    <string name="action_delete">Delete images</string>
    <string name="action_about">About</string>
    <string name="action_palette">Image palette</string>
    <string name="pick_color">Select picture</string>
    <string name="print_color_dialog_message_hint">Message</string>
    <string name="rgba_insertion_dialog_title">Set values</string>

    <!-- UColor items -->
    <string name="color_red">R</string>
    <string name="color_green">G</string>
    <string name="color_blue">B</string>
    <string name="color_opacity">O</string>
    <string name="color_hue">H</string>
    <string name="color_saturation">S</string>
    <string name="color_brightness">B</string>

    <!-- Print -->
    <string name="print_error">Printing error</string>
    <string name="print_job_canceled">Printing canceled</string>

    <!-- RGB Tool Gallery -->
    <string name="rgbtool_gallery_context_menu_title">Select Items</string>
    <string name="rgbtool_gallery_context_menu_subtitle">One item selected</string>
    <string name="rgbtool_gallery_context_menu_subtitle_more">%1$d items selected</string>

    <!-- Generic items -->
    <string name="loading">Loading&#8230;</string>
    <string name="album_name">RGB-Tool</string>
    <string name="clipboard">copied to clipboard</string>
    <string name="title_activity_color_picker">Color Picker</string>
    <string name="title_activity_color_list">Your colors</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_palette">Palette</string>
    <string name="error_open_gallery_image">Error: the image may not be in the local storage</string>
    <string name="color_picker_choose">Tap on the picture to choose an image</string>

    <!-- Attributions -->
    <string name="pref_category_ui">UI</string>
    <string name="pref_help">Help</string>
    <string name="pref_report_issue">Report an issue</string>
    <string name="pref_send_feedback">Send a feedback</string>
    <string name="pref_open_source_libs">Open Source Libraries</string>
    <string name="prefs_picasso">Picasso</string>
    <string name="prefs_butter_knife">Butter Knife</string>
    <string name="prefs_photoview">PhotoView</string>
    <string name="prefs_eventbus">EventBus</string>
    <string name="prefs_rxandroid">RxAndroid</string>
    <string name="prefs_leak_canary">LeakCanary</string>

    <!-- Swatches -->
    <string name="swatch_vibrant">Vibrant</string>
    <string name="swatch_light_vibrant">Light vibrant</string>
    <string name="swatch_dark_vibrant">Dark vibrant</string>
    <string name="swatch_muted">Muted</string>
    <string name="swatch_light_muted">Light muted</string>
    <string name="swatch_dark_muted">Dark muted</string>

    <!-- HEX insertion value -->
    <string name="hex_insertion_title">HEX value</string>
    <string name="hex_insertion_message_hint">8 digit HEX color (ARGB)</string>
    <string name="hex_insertion_not_valid_error">Error: not a valid HEX value!</string>

    <!-- Color details -->
    <string name="color_details_as_text_title">Text</string>
    <string name="color_details_as_background_title">Background</string>
    <string name="color_details_text_sample">Lorem ipsum dolor sit amet&#8230;</string>
    <string name="color_details_color">Color - #%s</string>
    <string name="color_details_complementary">Complementary</string>
    <string name="color_details_contrast">Contrast</string>

    <!-- Permissions -->
    <string name="rationale_external_storage">Storage access is required to save and open photos.</string>
    <string name="permissions_not_granted">Permission was not granted.</string>
    <string name="permissions_granted">Storage permission has been granted. You can now use the feature.</string>
    <string name="pref_theme">App Theme</string>

    <!-- Errors -->
    <string name="error">Error</string>
    <string name="error_send_mail">Please send the error report</string>
    <string name="error_dlg_content">An unexpected error occurred. Sorry for the inconvenience.</string>
    <string name="prefs_acra">ACRA</string>
    <string name="pref_github">GitHub</string>
    <string name="title_activity_live_picker">LivePicker</string>
</resources>
