<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    android:id="@+id/bottom_sheet_container"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clipToPadding="true"
    app:behavior_peekHeight="@dimen/manual_picker_bottom_sheet_peek_height"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <LinearLayout android:id="@+id/rgb_top_panel"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/manual_picker_bottom_sheet_peek_height"
            android:background="@color/primary"
            android:padding="@dimen/activity_horizontal_margin"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/textView_Hexadecimal"
                style="@style/RGBPanelComponent"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textIsSelectable="true"/>

        </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/activity_horizontal_margin"
            android:stretchColumns="0,1,2,3,4">

            <TableRow
                android:gravity="center_vertical"
                android:minHeight="36dp">

                <TextView
                    style="@style/RGBPanelComponentLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:text="@string/color_red"/>

                <TextView
                    android:id="@+id/textView_RGB_R"
                    style="@style/RGBPanelComponent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="40"
                    android:textIsSelectable="true"/>

                <TextView
                    style="@style/RGBPanelComponentLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:text="@string/color_green"/>

                <TextView
                    android:id="@+id/textView_RGB_G"
                    style="@style/RGBPanelComponent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="40"
                    android:textIsSelectable="true"/>

                <TextView
                    style="@style/RGBPanelComponentLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:text="@string/color_blue"/>

                <TextView
                    android:id="@+id/textView_RGB_B"
                    style="@style/RGBPanelComponent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="40"
                    android:textIsSelectable="true"/>

                <TextView
                    style="@style/RGBPanelComponentLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:text="@string/color_opacity"/>

                <TextView
                    android:id="@+id/textView_RGB_O"
                    style="@style/RGBPanelComponent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="40"
                    android:textIsSelectable="true"/>

            </TableRow>

            <TableRow
                android:gravity="center_vertical"
                android:minHeight="36dp">

                <TextView
                    style="@style/RGBPanelComponentLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:text="@string/color_hue"/>

                <TextView
                    android:id="@+id/textView_HSB_H"
                    style="@style/RGBPanelComponent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="40"
                    android:textIsSelectable="true"/>

                <TextView
                    style="@style/RGBPanelComponentLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:text="@string/color_saturation"/>

                <TextView
                    android:id="@+id/textView_HSB_S"
                    style="@style/RGBPanelComponent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="40"
                    android:textIsSelectable="true"/>

                <TextView
                    style="@style/RGBPanelComponentLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:text="@string/color_brightness"/>

                <TextView
                    android:id="@+id/textView_HSB_B"
                    style="@style/RGBPanelComponent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="90"
                    android:textIsSelectable="true"/>

            </TableRow>

        </TableLayout>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>