<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/rgb_panel_margin_top"
    android:layout_marginBottom="@dimen/rgb_panel_margin_bottom"
    style="?cardStyle">
    <LinearLayout android:id="@+id/rgb_panel"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="2dp"
            android:orientation="horizontal">

            <View
                android:id="@+id/color_view"
                android:layout_width="64dp"
                android:layout_height="32dp"/>
            <Space
                android:layout_width="64dp"
                android:layout_height="wrap_content" />
            <ImageButton
                android:id="@+id/btn_dismiss_panel"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:background="?selectableItemBackgroundBorderless"
                android:src="@drawable/btn_dismiss"
                android:layout_gravity="end"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="2dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/RGBPanelLabel"
                android:text="@string/argb_label" />

            <TextView
                android:id="@+id/rgb_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/rgb_panel_margin_left"
                style="@style/RGBPanelComponentLabel" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="2dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/RGBPanelLabel"
                android:text="@string/hsb_label" />

            <TextView
                android:id="@+id/hsb_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/rgb_panel_margin_left"
                style="@style/RGBPanelComponentLabel" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="2dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/RGBPanelLabel"
                android:text="@string/color_hexadecimal_label" />

            <TextView
                android:id="@+id/hex_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/rgb_panel_margin_left"
                style="@style/RGBPanelComponent"
                />

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>